--- a/src/chat.html
+++ b/src/chat.html
@@ -10,7 +10,7 @@
     integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
     crossorigin="anonymous"
 	/>
-  <title>Mumble | Chat</title>
+  <title>Mumble | Chat Room</title>
 </head>
 <body>
   <div class="chat-container">
